test/test_suite/errors/precedence_err.c3

func void test()
{
    int x = 3 ^ 5 & 6; // #error: You need to add explicit parentheses.
}
